final changes to fix whitespace on mobile display

--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ body {
 }
 
 /* About Me, Contact Info */
-#about, #contact {
+.bio {
   margin-bottom: 40px;
   margin-left: 20%;
   margin-right: 20%;
@@ -144,6 +144,11 @@ body {
   text-align: center;
 }
 
+.contact_description {
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
 footer {
   display: flex;
   flex-direction: row;
@@ -172,12 +177,12 @@ footer {
 
 /* Smaller Screen Adjustments */
 @media screen and (max-width: 1024px) {
-  h2 {margin-left: -50%; margin-right: -50%;}
+  .project_intro {margin-left: 0px; margin-right: 0px;}
   .nav-item {margin-left: 20px; margin-right: 20px;}
   .project_and_image {flex-direction: column; align-items: center;}
   .project_description {text-align: center; margin-left: -10%; margin-right: -10%;}
-  .bio {flex-direction: column; align-items: center;}
-  .personal_info {text-align: center; margin-left: -10%; margin-right: -10%;}
-  #contact {margin-left: 10%; margin-right: 10%;}
+  .bio {flex-direction: column; align-items: center; margin-left: 10%; margin-right: 10%;}
+  .personal_info {text-align: center; margin-right: 0px;}
+  .contact_description {margin-left: 10%; margin-right: 10%;}
 }
 
